# InterviewPractice

./: .gitignore  CMakeLists.txt
include/: add.hpp  lfs_cache.hpp  zig_zag.hpp
src/: add.cpp  lfs_cache.cpp  multiply.cpp  zig_zag.cpp
tests/: test_add.cpp  test_lfs_cache.cpp  test_multiply.cpp  test_zig_zag.cpp
